@@ -1,3 +1,8 @@
+2003-10-03
+	* add connect timeout of 0.25s, for dead host detection.
+	  We had 1 second a couple revs ago, but lost it when
+	  ditching IO::Socket module.  (avva)
+	
 2003-10-02
 	* fix _incrdecr with explicit-hashvalue keys (whitaker)
 	
